--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,16 @@ body{
 
 }
 .header{
-
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position:fixed top;
 }
 h1{
     font-size: 24px;
     color: #f9faf8;
+    margin-right: 200px;
+    padding: 20px;
 }
 h2{
     font-size: 48px;
@@ -42,6 +47,7 @@ h3{
 }
 .footer{
     background-color: #1f2937;
+    position:fixed bottom;
 }
 #top-signup{
     background-color: #3882f6;
@@ -52,6 +58,9 @@ h3{
 .header-links{
     font-size: 18px;
     color: #e5e7eb;
+    margin: 10px;
+    padding: 10px;
+    text-decoration: none;
 }
 .top-text{
     font-size: 18px;
