--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 .body{
+    display: flex;
+    flex-direction: column;
 }
 .header{
     display: flex;
@@ -16,9 +18,9 @@ h1{
 h2{
     font-size: 48px;
     font-weight: bolder;
-    color: #f9faf8;
-    margin-left: 50px;
+    color: hsl(90, 17%, 98%);
     padding: 10px;
+    align-self: flex-start;
 }
 h3{
     font-size: 36px;
@@ -30,7 +32,7 @@ h3{
 }
 .top{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content:space-around;
     margin:30px;
     padding: 20px;
@@ -55,10 +57,10 @@ h3{
 }
 #top-signup{
     background-color: #3882f6;
-    justify-self: flex-start;
-    order: -3;
+    justify-self: flex-end;
     padding: 10px;
-    align-self: flex-end;
+    align-self: flex-start;
+    margin-left: 100px;
     
 }
 #bottom-signup{
@@ -74,13 +76,12 @@ h3{
 .top-text{
     font-size: 18px;
     color: #e5e7eb;
-    align-self: flex-end;
     margin:10px;
 }
 #top-img{
     width: 550px;
     height: auto;
-    justify-content: end;
+    display: inline;
 }
 .images{
     width: 250px;
@@ -88,12 +89,8 @@ h3{
     margin:20px;
 }
 #row{
-    margin:100px;
     margin-left: 300px;
     padding: 100px;
+    display: flex;
 
-}
-#row{
-  display: flex;
-  flex-wrap: wrap;
 }
