--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ h1{
 h2{
     font-size: 48px;
     font-weight: bolder;
-    color: hsl(90, 17%, 98%);
+    color: #fafbf9;
     padding: 10px;
     align-self: flex-start;
 }
@@ -26,6 +26,7 @@ h3{
     font-size: 36px;
     font-weight: bolder;
     color:#1f2937;
+    align-self: center;
 }
 .top-section{
     background-color: #1f2937;
@@ -87,10 +88,14 @@ h3{
     width: 250px;
     height: 250px;
     margin:20px;
+    
 }
 #row{
-    margin-left: 300px;
-    padding: 100px;
+    padding: 50px;
     display: flex;
-
+    justify-content: center;
+}
+#row-text{
+    margin:10px;
+    padding:10px;
 }
